link to source code from doc pages

--- a/apps/docs/app/(docs)/components/alert/page.mdx
+++ b/apps/docs/app/(docs)/components/alert/page.mdx
@@ -1,11 +1,14 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 import { Alert } from "@optiaxiom/react";
 
 # Alert
 
 Keeps users informed of important and sometimes time-sensitive changes.
+
+<Links component="alert" />
 
 ## Documentation
 
