--- a/apps/docs/app/(docs)/components/avatar/page.mdx
+++ b/apps/docs/app/(docs)/components/avatar/page.mdx
@@ -1,9 +1,12 @@
 import { Demo } from "@/components/demo";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 
 # Avatar
 
 `Avatar` is an image element with a fallback for representing the user.
+
+<Links component="avatar" />
 
 ## Documentation
 
