--- a/apps/docs/app/(docs)/components/axiom-provider/page.mdx
+++ b/apps/docs/app/(docs)/components/axiom-provider/page.mdx
@@ -1,9 +1,12 @@
 import { Cards } from "@/components/cards";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 
 # AxiomProvider
 
 `AxiomProvider` provides all the context managers required for our components to work. It must be rendered at the root of your application and should be used only once.
+
+<Links component="axiom-provider" />
 
 ## Documentation
 
