--- a/apps/docs/app/(docs)/components/badge/page.mdx
+++ b/apps/docs/app/(docs)/components/badge/page.mdx
@@ -1,10 +1,13 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 
 # Badge
 
 Use to emphasize a status, count, state or value.
+
+<Links component="badge" />
 
 ## Documentation
 
