--- a/apps/docs/app/(docs)/components/banner/page.mdx
+++ b/apps/docs/app/(docs)/components/banner/page.mdx
@@ -1,10 +1,13 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 
 # Banner
 
 Display a prominent message at the top of the screen.
+
+<Links component="banner" />
 
 ## Documentation
 
