--- a/apps/docs/app/(docs)/components/breadcrumb/page.mdx
+++ b/apps/docs/app/(docs)/components/breadcrumb/page.mdx
@@ -1,3 +1,4 @@
+import { Links } from "@/components/links";
 import { Callout } from "nextra/components";
 
 # Breadcrumb
@@ -5,3 +6,5 @@ import { Callout } from "nextra/components";
 <Callout emoji="🚨">
   This page is a stub. Help us expand it by contributing!
 </Callout>
+
+<Links component="breadcrumb" />
