--- a/apps/docs/app/(docs)/components/calendar/page.mdx
+++ b/apps/docs/app/(docs)/components/calendar/page.mdx
@@ -1,9 +1,12 @@
 import { Demo } from "@/components/demo";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 
 # Calendar
 
 Base date picker component.
+
+<Links component="calendar" />
 
 ## Documentation
 
