--- a/apps/docs/app/(docs)/components/checkbox/page.mdx
+++ b/apps/docs/app/(docs)/components/checkbox/page.mdx
@@ -1,10 +1,13 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 
 # Checkbox
 
 Basic control to allow selecting one or more items from a set.
+
+<Links component="checkbox" />
 
 ## Documentation
 
