--- a/apps/docs/app/(docs)/components/code/page.mdx
+++ b/apps/docs/app/(docs)/components/code/page.mdx
@@ -1,9 +1,12 @@
 import { Demo } from "@/components/demo";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 
 # Code
 
 Display inline code.
+
+<Links component="code" />
 
 ## Documentation
 
