--- a/apps/docs/app/(docs)/components/data-table/page.mdx
+++ b/apps/docs/app/(docs)/components/data-table/page.mdx
@@ -1,11 +1,14 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 import { Alert } from "@optiaxiom/react";
 
 # DataTable
 
 Easy to use table and datagrids built using [TanStack Table](https://tanstack.com/table/latest).
+
+<Links component="data-table" />
 
 ## Documentation
 
