--- a/apps/docs/app/(docs)/components/field/page.mdx
+++ b/apps/docs/app/(docs)/components/field/page.mdx
@@ -1,9 +1,12 @@
 import { Demo } from "@/components/demo";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 
 # Field
 
 Wrapper for inputs to provide context such as label/help/required etc.
+
+<Links component="field" />
 
 ## Documentation
 
