--- a/apps/docs/app/(docs)/components/grid/page.mdx
+++ b/apps/docs/app/(docs)/components/grid/page.mdx
@@ -1,10 +1,13 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 
 # Grid
 
 Use `Grid` component to place items in a grid using equal width columns.
+
+<Links component="grid" />
 
 ## Documentation
 
