--- a/apps/docs/app/(docs)/components/heading/page.mdx
+++ b/apps/docs/app/(docs)/components/heading/page.mdx
@@ -1,10 +1,13 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 
 # Heading
 
 `Heading` component is used to display page title and section headings. The default root element is `h1` which can be configured using the `level` prop.
+
+<Links component="heading" />
 
 ## Documentation
 
