--- a/apps/docs/app/(docs)/components/indicator/page.mdx
+++ b/apps/docs/app/(docs)/components/indicator/page.mdx
@@ -1,9 +1,12 @@
 import { Demo } from "@/components/demo";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 
 # Indicator
 
 Display a badge at the corner of another element.
+
+<Links component="indicator" />
 
 ## Documentation
 
