--- a/apps/docs/app/(docs)/components/inline-input/page.mdx
+++ b/apps/docs/app/(docs)/components/inline-input/page.mdx
@@ -1,10 +1,13 @@
 import { Demo } from "@/components/demo";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 import { Alert } from "@optiaxiom/react";
 
 # InlineInput
 
 Seamless textbox for capturing user input with completely customizable visual styles.
+
+<Links component="inline-input" />
 
 ## Documentation
 
