--- a/apps/docs/app/(docs)/components/link/page.mdx
+++ b/apps/docs/app/(docs)/components/link/page.mdx
@@ -1,9 +1,12 @@
 import { Demo } from "@/components/demo";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 
 # Link
 
 Anchor element for creating hyperlinks.
+
+<Links component="link" />
 
 ## Documentation
 
