--- a/apps/docs/app/(docs)/components/page.mdx
+++ b/apps/docs/app/(docs)/components/page.mdx
@@ -1,10 +1,13 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 
 # Box
 
 `Box` is the base component for all our other components and provides a convenient way to use our design tokens and set element styles without having to write any custom CSS.
+
+<Links component="box" />
 
 ## Documentation
 
