--- a/apps/docs/app/(docs)/components/pagination/page.mdx
+++ b/apps/docs/app/(docs)/components/pagination/page.mdx
@@ -1,10 +1,13 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 
 # Pagination
 
 Display active page and navigate between multiple pages.
+
+<Links component="pagination" />
 
 ## Documentation
 
