--- a/apps/docs/app/(docs)/components/pill/page.mdx
+++ b/apps/docs/app/(docs)/components/pill/page.mdx
@@ -1,10 +1,13 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 
 # Pill
 
 A pill is a visual representation of an attribute, usually representing tags or metrics.
+
+<Links component="pill" />
 
 ## Documentation
 
