--- a/apps/docs/app/(docs)/components/popover/page.mdx
+++ b/apps/docs/app/(docs)/components/popover/page.mdx
@@ -1,9 +1,12 @@
 import { Demo } from "@/components/demo";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 
 # Popover
 
 Display arbitrary rich content inside a non-modal dialog triggered by a button.
+
+<Links component="popover" />
 
 ## Documentation
 
