--- a/apps/docs/app/(docs)/components/progress/page.mdx
+++ b/apps/docs/app/(docs)/components/progress/page.mdx
@@ -1,10 +1,13 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 
 # Progress
 
 Display feedback on status of task or length of a process.
+
+<Links component="progress" />
 
 ## Documentation
 
