--- a/apps/docs/app/(docs)/components/separator/page.mdx
+++ b/apps/docs/app/(docs)/components/separator/page.mdx
@@ -1,10 +1,13 @@
 import { Demo } from "@/components/demo";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 import { Alert } from "@optiaxiom/react";
 
 # Separator
 
 `Separator` component is used to visually separate items in a list or group. By default the orientation is set to `horizontal`.
+
+<Links component="separator" />
 
 ## Documentation
 
