--- a/apps/docs/app/(docs)/components/sidebar/page.mdx
+++ b/apps/docs/app/(docs)/components/sidebar/page.mdx
@@ -1,9 +1,12 @@
 import { Demo } from "@/components/demo";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 
 # Sidebar
 
 Primary navigation menu for left side of the page that includes support for branding, links, etc.
+
+<Links component="sidebar" />
 
 ## Documentation
 
