--- a/apps/docs/app/(docs)/components/skeleton/page.mdx
+++ b/apps/docs/app/(docs)/components/skeleton/page.mdx
@@ -1,10 +1,13 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 
 # Skeleton
 
 Display placeholder content while data is loading.
+
+<Links component="skeleton" />
 
 ## Documentation
 
