--- a/apps/docs/app/(docs)/components/spinner/page.mdx
+++ b/apps/docs/app/(docs)/components/spinner/page.mdx
@@ -1,10 +1,13 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 
 # Spinner
 
 Used for indicating an unspecified wait time.
+
+<Links component="spinner" />
 
 ## Documentation
 
