--- a/apps/docs/app/(docs)/components/switch/page.mdx
+++ b/apps/docs/app/(docs)/components/switch/page.mdx
@@ -1,10 +1,13 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 
 # Switch
 
 Control to allow toggling between checked and not checked state.
+
+<Links component="switch" />
 
 ## Documentation
 
