--- a/apps/docs/app/(docs)/components/table/page.mdx
+++ b/apps/docs/app/(docs)/components/table/page.mdx
@@ -1,10 +1,13 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 
 # Table
 
 Display tabular data using rows and columns.
+
+<Links component="table" />
 
 ## Documentation
 
