--- a/apps/docs/app/(docs)/components/textarea/page.mdx
+++ b/apps/docs/app/(docs)/components/textarea/page.mdx
@@ -1,10 +1,13 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 
 # Textarea
 
 Multi-line text field for capturing user input.
+
+<Links component="textarea" />
 
 ## Documentation
 
