--- a/apps/docs/app/(docs)/components/toast/page.mdx
+++ b/apps/docs/app/(docs)/components/toast/page.mdx
@@ -1,10 +1,13 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 
 # Toast
 
 Display a brief notification.
+
+<Links component="toast" />
 
 ## Documentation
 
