--- a/apps/docs/app/(docs)/components/toggle-button/page.mdx
+++ b/apps/docs/app/(docs)/components/toggle-button/page.mdx
@@ -1,10 +1,13 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 
 # ToggleButton
 
 `ToggleButton` component represents a button that can be toggled on or off.
+
+<Links component="toggle-button" />
 
 ## Documentation
 
