--- a/apps/docs/app/(docs)/components/tooltip/page.mdx
+++ b/apps/docs/app/(docs)/components/tooltip/page.mdx
@@ -1,9 +1,12 @@
 import { Demo } from "@/components/demo";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 
 # Tooltip
 
 Popup with brief information shown when user interacts with an element using keyboard focus or mouse hover.
+
+<Links component="tooltip" />
 
 ## Documentation
 
