--- a/apps/docs/app/(docs)/components/alert-dialog/page.mdx
+++ b/apps/docs/app/(docs)/components/alert-dialog/page.mdx
@@ -1,10 +1,13 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 
 # AlertDialog
 
 Display a modal with important content that expects confirmation from the user.
+
+<Links component="alert-dialog" />
 
 ## Documentation
 
