--- a/apps/docs/app/(docs)/components/button/page.mdx
+++ b/apps/docs/app/(docs)/components/button/page.mdx
@@ -1,10 +1,13 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 
 # Button
 
 `Button` component is used to trigger actions.
+
+<Links component="button" />
 
 ## Documentation
 
