--- a/apps/docs/app/(docs)/components/date-input/page.mdx
+++ b/apps/docs/app/(docs)/components/date-input/page.mdx
@@ -1,10 +1,13 @@
 import { Demo } from "@/components/demo";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 import { Flex, Kbd } from "@optiaxiom/react";
 
 # DateInput
 
 Input field with calendar that lets user enter dates.
+
+<Links component="date-input" />
 
 ## Documentation
 
