--- a/apps/docs/app/(docs)/components/date-picker/page.mdx
+++ b/apps/docs/app/(docs)/components/date-picker/page.mdx
@@ -1,9 +1,12 @@
 import { Demo } from "@/components/demo";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 
 # DatePicker
 
 Calendar popover that lets user pick dates.
+
+<Links component="date-picker" />
 
 ## Documentation
 
