--- a/apps/docs/app/(docs)/components/date-range-picker/page.mdx
+++ b/apps/docs/app/(docs)/components/date-range-picker/page.mdx
@@ -1,9 +1,12 @@
 import { Demo } from "@/components/demo";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 
 # DateRangePicker
 
 Calendar popover that lets user pick date ranges.
+
+<Links component="date-range-picker" />
 
 ## Documentation
 
