--- a/apps/docs/app/(docs)/components/dialog/page.mdx
+++ b/apps/docs/app/(docs)/components/dialog/page.mdx
@@ -1,11 +1,14 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 import { Alert } from "@optiaxiom/react";
 
 # Dialog
 
 Display a modal dialog box.
+
+<Links component="dialog" />
 
 ## Documentation
 
