--- a/apps/docs/app/(docs)/components/flex/page.mdx
+++ b/apps/docs/app/(docs)/components/flex/page.mdx
@@ -1,10 +1,13 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 
 # Flex
 
 Use `Flex` component to stack items vertically or horizontally.
+
+<Links component="flex" />
 
 ## Documentation
 
