--- a/apps/docs/app/(docs)/components/input/page.mdx
+++ b/apps/docs/app/(docs)/components/input/page.mdx
@@ -1,10 +1,13 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 
 # Input
 
 Basic text field for capturing user input.
+
+<Links component="input" />
 
 ## Documentation
 
