--- a/apps/docs/app/(docs)/components/kbd/page.mdx
+++ b/apps/docs/app/(docs)/components/kbd/page.mdx
@@ -1,9 +1,12 @@
 import { Demo } from "@/components/demo";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 
 # Kbd
 
 Inline text representing keyboard input.
+
+<Links component="kbd" />
 
 ## Documentation
 
