--- a/apps/docs/app/(docs)/components/radio-group/page.mdx
+++ b/apps/docs/app/(docs)/components/radio-group/page.mdx
@@ -1,10 +1,13 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 
 # RadioGroup
 
 Basic control to allow selecting only one item from a set.
+
+<Links component="radio" />
 
 ## Documentation
 
