--- a/apps/docs/app/(docs)/components/search-input/page.mdx
+++ b/apps/docs/app/(docs)/components/search-input/page.mdx
@@ -1,10 +1,13 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 
 # SearchInput
 
 Basic search input field with clear button.
+
+<Links component="search-input" />
 
 ## Documentation
 
