--- a/apps/docs/app/(docs)/components/text/page.mdx
+++ b/apps/docs/app/(docs)/components/text/page.mdx
@@ -1,10 +1,13 @@
 import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
+import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
 
 # Text
 
 Display body or any other form of text. By default it outputs the `<p>` paragraph element.
+
+<Links component="text" />
 
 ## Documentation
 
