change initial input visible logic
by allowing initialInputVisible to control the initial input visiblility - so
both true and false works while undefined defaults to checking if at least 50%
items are selectable.

--- a/apps/docs/app/(docs)/components/menu/page.mdx
+++ b/apps/docs/app/(docs)/components/menu/page.mdx
@@ -60,9 +60,9 @@ We can render multi-select items by enabling the `multi` property.
 
 ### Input
 
-By default the input is only shown if there are any selectable items (items with a `selected` property). But we can always show the input by enabling the `defaultInputVisible` prop.
+By default the input is only shown if there are any selectable items (items with a `selected` property). But we can always show the input by enabling the `initialInputVisible` prop.
 
-<Demo component="menu/input-usage" meta="/defaultInputVisible/" />
+<Demo component="menu/input-usage" meta="/initialInputVisible/" />
 
 #### Filtering
 
