--- a/apps/docs/app/(docs)/styling/design-tokens/page.mdx
+++ b/apps/docs/app/(docs)/styling/design-tokens/page.mdx
@@ -36,7 +36,7 @@ The following css custom properties will be available:
 }
 ```
 
-And they can be accessed via the `theme` object:
+And they can also be accessed via the `theme` object:
 
 ```ts
 import { theme } from "@optiaxiom/react";
