make demos distinct
to help clarify what is being demonstrated

--- a/apps/docs/app/(docs)/components/menu/page.mdx
+++ b/apps/docs/app/(docs)/components/menu/page.mdx
@@ -44,7 +44,7 @@ Items must be an array of objects of `MenuOption` type.
 
 Clicking the items will not do anything yet. For that we'll have to add the `execute` property to each item.
 
-<Demo component="menu/content-usage" meta="{20-22}" />
+<Demo component="menu/content-usage" meta="{23}" />
 
 #### Single-select
 
