document menu groups

--- a/apps/docs/app/(docs)/components/menu/page.mdx
+++ b/apps/docs/app/(docs)/components/menu/page.mdx
@@ -104,6 +104,12 @@ Add the `link` property to options to render them as links.
 
 <Demo component="menu/link-usage" meta="{14}" />
 
+### Groups
+
+Use `group` property to group items.
+
+<Demo component="menu/group-usage" />
+
 ### Submenus
 
 Use `subOptions` property to render submenus.
