--- a/apps/docs/app/(docs)/components/segmented-control/page.mdx
+++ b/apps/docs/app/(docs)/components/segmented-control/page.mdx
@@ -1,7 +1,5 @@
-import { Cards } from "@/components/cards";
-import { Demo } from "@/components/demo";
-import { Links } from "@/components/links";
-import { PropsTable } from "@/components/props-table";
+import { Cards, Demo, Links, PropsTable } from "@/components";
+import { Flex, Kbd } from "@optiaxiom/react";
 
 # SegmentedControl
 
@@ -38,6 +36,18 @@ Use the `value` and `defaultValue` props to toggle between controlled and uncont
 ### SegmentedControlItem
 
 <PropsTable component="SegmentedControlItem" />
+
+## Accessibility
+
+### Keyboard interactions
+
+| Key                                                                                 | Description                                                            |
+| :---------------------------------------------------------------------------------- | :--------------------------------------------------------------------- |
+| <Kbd>Tab</Kbd>                                                                      | Moves focus to either the pressed item or the first item in the group. |
+| <Flex flexDirection="row" gap="8"><Kbd>Space</Kbd> <Kbd>Enter</Kbd></Flex>          | Activates/deactivates the item.                                        |
+| <Flex flexDirection="row" gap="8"><Kbd>ArrowDown</Kbd> <Kbd>ArrowRight</Kbd></Flex> | Moves focus to the next item in the group.                             |
+| <Flex flexDirection="row" gap="8"><Kbd>ArrowUp</Kbd> <Kbd>ArrowLeft</Kbd></Flex>    | Moves focus to the previous item in the group.                         |
+| <Flex flexDirection="row" gap="8"><Kbd>Home</Kbd> <Kbd>End</Kbd></Flex>             | Moves focus to the first/last item.                                    |
 
 ## Changelog
 
