--- a/apps/docs/app/(docs)/components/calendar/page.mdx
+++ b/apps/docs/app/(docs)/components/calendar/page.mdx
@@ -1,6 +1,5 @@
-import { Demo } from "@/components/demo";
-import { Links } from "@/components/links";
-import { PropsTable } from "@/components/props-table";
+import { Demo, Links, PropsTable } from "@/components";
+import { Flex, Kbd } from "@optiaxiom/react";
 
 # Calendar
 
@@ -19,6 +18,18 @@ Base date picker component.
 ### Calendar
 
 <PropsTable component="Calendar" />
+
+## Accessibility
+
+### Keyboard interactions
+
+| Key                                                                                                                                                                                      | Description                              |
+| :--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :--------------------------------------- |
+| <Kbd>Space</Kbd>                                                                                                                                                                         | Selects the focused day.                 |
+| <Kbd>Enter</Kbd>                                                                                                                                                                         | Selects the focused day.                 |
+| <Flex gap="8"><Flex flexDirection="row" gap="8"><Kbd>ArrowUp</Kbd> <Kbd>ArrowDown</Kbd></Flex><Flex flexDirection="row" gap="8"><Kbd>ArrowRight</Kbd> <Kbd>ArrowLeft</Kbd></Flex></Flex> | Navigate between days in the calendar.   |
+| <Flex flexDirection="row" gap="8"><Kbd>PageUp</Kbd> <Kbd>PageDown</Kbd></Flex>                                                                                                           | Navigate between months in the calendar. |
+| <Flex flexDirection="row" gap="8"><Kbd keys="shift">PageUp</Kbd> <Kbd keys="shift">PageDown</Kbd></Flex>                                                                                 | Navigate between years in the calendar.  |
 
 ## Changelog
 
