--- a/apps/docs/app/(docs)/components/date-picker/page.mdx
+++ b/apps/docs/app/(docs)/components/date-picker/page.mdx
@@ -1,6 +1,5 @@
-import { Demo } from "@/components/demo";
-import { Links } from "@/components/links";
-import { PropsTable } from "@/components/props-table";
+import { Demo, Links, PropsTable } from "@/components";
+import { Flex, Kbd } from "@optiaxiom/react";
 
 # DatePicker
 
@@ -27,6 +26,19 @@ Calendar popover that lets user pick dates.
 ### DatePickerContent
 
 <PropsTable component="DatePickerContent" />
+
+## Accessibility
+
+### Keyboard interactions
+
+| Key                                                                                                                                                                                      | Description                                                                                                                                               |
+| :--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :-------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| <Kbd>Space</Kbd>                                                                                                                                                                         | When focus is on `DatePickerTrigger`, opens the calendar and focuses the selected day (or today's date). When focus is on a day, selects the focused day. |
+| <Kbd>Enter</Kbd>                                                                                                                                                                         | When focus is on `DatePickerTrigger`, opens the calendar and focuses the selected day (or today's date). When focus is on a day, selects the focused day. |
+| <Flex gap="8"><Flex flexDirection="row" gap="8"><Kbd>ArrowUp</Kbd> <Kbd>ArrowDown</Kbd></Flex><Flex flexDirection="row" gap="8"><Kbd>ArrowRight</Kbd> <Kbd>ArrowLeft</Kbd></Flex></Flex> | Navigate between days in the calendar.                                                                                                                    |
+| <Flex flexDirection="row" gap="8"><Kbd>PageUp</Kbd> <Kbd>PageDown</Kbd></Flex>                                                                                                           | Navigate between months in the calendar.                                                                                                                  |
+| <Flex flexDirection="row" gap="8"><Kbd keys="shift">PageUp</Kbd> <Kbd keys="shift">PageDown</Kbd></Flex>                                                                                 | Navigate between years in the calendar.                                                                                                                   |
+| <Kbd>Esc</Kbd>                                                                                                                                                                           | Closes the calendar popover and moves focus back to `DatePickerTrigger`.                                                                                  |
 
 ## Changelog
 
