--- a/apps/docs/app/(docs)/components/select/page.mdx
+++ b/apps/docs/app/(docs)/components/select/page.mdx
@@ -1,7 +1,5 @@
-import { Cards } from "@/components/cards";
-import { Demo } from "@/components/demo";
-import { Links } from "@/components/links";
-import { PropsTable } from "@/components/props-table";
+import { Cards, Demo, Links, PropsTable } from "@/components";
+import { Flex, Kbd } from "@optiaxiom/react";
 
 # Select
 
@@ -99,7 +97,36 @@ We can group options using the `group` property.
 
 <PropsTable component="SelectContent" />
 
+## Accessibility
+
+### Keyboard interactions
+
+| Key                                                                            | Description                                                                                                                                                               |
+| :----------------------------------------------------------------------------- | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| <Flex flexDirection="row" gap="8"><Kbd>Space</Kbd> <Kbd>Enter</Kbd></Flex>     | When focus is on `SelectTrigger`, opens the menu and focuses the first item (or selected item). When focus is on an item, activates the focused item and closes the menu. |
+| <Kbd>ArrowDown</Kbd>                                                           | When focus is on `SelectTrigger`, opens the menu and focuses the first item (or selected item). When focus is on an item, moves focus to the next item.                   |
+| <Kbd>ArrowUp</Kbd>                                                             | When focus is on `SelectTrigger`, opens the menu and focuses the last item (or selected item). When focus is on an item, moves focus to the previous item.                |
+| <Flex flexDirection="row" gap="8"><Kbd>PageUp</Kbd> <Kbd>PageDown</Kbd></Flex> | Moves focus up/down by 10 items at a time.                                                                                                                                |
+| <Flex flexDirection="row" gap="8"><Kbd>Home</Kbd> <Kbd>End</Kbd></Flex>        | Moves focus to the first/last item.                                                                                                                                       |
+| <Kbd>Esc</Kbd>                                                                 | Closes the menu and moves focus back to `SelectTrigger`.                                                                                                                  |
+
 ## Changelog
+
+### 1.4.0
+
+- Moved component out of **Alpha**.
+
+  ```jsx
+  // Before
+  import {
+    Select,
+    SelectContent,
+    SelectTrigger,
+  } from "@optiaxiom/react/unstable";
+
+  // After
+  import { Select, SelectContent, SelectTrigger } from "@optiaxiom/react";
+  ```
 
 ### 1.3.0
 
