export Cover component
and add relative position to table cells to ensure cover works inside them

--- a/apps/docs/app/(docs)/components/data-table/page.mdx
+++ b/apps/docs/app/(docs)/components/data-table/page.mdx
@@ -55,6 +55,8 @@ Follow the [column pinning guide](https://tanstack.com/table/latest/docs/guide/c
 
 Follow the [row selection guide](https://tanstack.com/table/latest/docs/guide/row-selection) to allow selecting and highlighting rows.
 
+Combine `Checkbox` with `Cover` to make them easier to interact with by spanning the whole cell.
+
 <Demo component="data-table/row-selection-usage" />
 
 ### Row actions
