--- a/apps/docs/app/(docs)/components/table/page.mdx
+++ b/apps/docs/app/(docs)/components/table/page.mdx
@@ -2,12 +2,19 @@ import { Cards } from "@/components/cards";
 import { Demo } from "@/components/demo";
 import { Links } from "@/components/links";
 import { PropsTable } from "@/components/props-table";
+import { Alert } from "@optiaxiom/react";
 
 # Table
 
 Display tabular data using rows and columns.
 
 <Links component="table" />
+
+<Alert intent="warning" mt="16">
+  These are very low level primitives used for implementing the basic table
+  styles. Use [DataTable](../data-table/) if you are looking for a fully
+  featured table component.
+</Alert>
 
 ## Documentation
 
