move Table and DataTable out of alpha

--- a/apps/docs/app/(docs)/components/data-table/page.mdx
+++ b/apps/docs/app/(docs)/components/data-table/page.mdx
@@ -143,6 +143,18 @@ Columns will be virtualized when there are more than 20 columns in a table and r
 
 ## Changelog
 
+### 1.4.0
+
+- Moved component out of **Alpha**.
+
+  ```jsx
+  // Before
+  import { DataTable } from "@optiaxiom/react/unstable";
+
+  // After
+  import { DataTable } from "@optiaxiom/react";
+  ```
+
 ### 0.3.0
 
 - Added component
