--- a/apps/docs/app/(docs)/components/table/page.mdx
+++ b/apps/docs/app/(docs)/components/table/page.mdx
@@ -89,6 +89,18 @@ export default () => (
 
 ## Changelog
 
+### 1.4.0
+
+- Moved component out of **Alpha**.
+
+  ```jsx
+  // Before
+  import { Table } from "@optiaxiom/react/unstable";
+
+  // After
+  import { Table } from "@optiaxiom/react";
+  ```
+
 ### 0.1.0
 
 - Added component
